...
        destNav.popoverPresentationController.delegate = self;
        MSColorSelectionViewController *colorSelectionController = (MSColorSelectionViewController *)destNav.visibleViewController;
        colorSelectionController.delegate = self;
        colorSelectionController.color = self.view.backgroundColor;

        if (self.traitCollection.horizontalSizeClass == UIUserInterfaceSizeClassCompact) {
            UIBarButtonItem *doneBtn = [[UIBarButtonItem alloc] initWithTitle:NSLocalizedString(@"Done", ) style:UIBarButtonItemStyleDone target:self action:@selector(ms_dismissViewController:)];
            colorSelectionController.navigationItem.rightBarButtonItem = doneBtn;
        }
    }
}

- (IBAction)onButtonTap:(UIButton *)button
...
