...

- (instancetype)initWithFrame:(CGRect)frame
{
    self = [super initWithFrame:frame];

    if (self) {
        self.accessibilityLabel = @"color_slider";

        _minimumValue = 0.0f;
        _maximumValue = 1.0f;
        _value = 0.0f;

        self.layer.delegate = self;
...
