...
    self = [super initWithFrame:frame];

    if (self) {
        _hue = 0.0f;
        _saturation = 0.0f;

        self.accessibilityLabel = @"color_wheel_view";

        self.layer.delegate = self;
        [self.layer addSublayer:[self indicatorLayer]];

        //    [self setSelectedPoint:CGPointMake(dimension / 2, dimension / 2)];
    }
...
